fix sharp report with code

--- a/src/SharpReportTemplate.org
+++ b/src/SharpReportTemplate.org
@@ -3,10 +3,6 @@
 #+email: ivan.hanigan@anu.edu.au
 #+LaTeX_CLASS: article
 #+LaTeX_CLASS_OPTIONS: [a4paper]
-#+LaTeX_HEADER: \usepackage{tabulary}
-#+LaTeX_HEADER: \usepackage{longtable}
-#+latex_header: \usepackage{rotating}
-#+LaTeX_HEADER: \usepackage{graphicx} 
 #+LaTeX_HEADER: \usepackage{amssymb,amsmath}
 #+LaTeX_HEADER: \usepackage{fancyhdr} %For headers and footers
 #+LaTeX_HEADER: \pagestyle{fancy} %For headers and footers
@@ -15,7 +11,6 @@
 #+LaTeX_HEADER: \floatstyle{boxed} %using this
 #+LaTeX_HEADER: \restylefloat{figure} %and this command
 #+LaTeX_HEADER: \usepackage{url} %Formatting of yrls
-#+LaTeX_HEADER: \usepackage{verbatim} 
 #+LaTeX_HEADER: \lhead{ivanhanigan.github.com}
 #+LaTeX_HEADER: \chead{}
 #+LaTeX_HEADER: \rhead{\today}
@@ -25,12 +20,31 @@
 #+LATEX: \tableofcontents
 
 * Introduction
-This is a sharp looking report template I got from \cite{Bull2011}.
+This is a sharp looking report template I got from an R blogger \cite{Bull2011}.
+
+The pages after the first page have a nice looking header, footer and page number.
 \clearpage
 
 * Section 1
-The pages after the first page have a nice looking header, footer and page number.
+In the Org file you can see some hidden R code that computes a linear regression and returns the results shown in Table \ref{ATable}.
+\input{ATable.tex}
 \clearpage
+*** COMMENT some-code
+#+name:some-code
+#+begin_src R :session *R* :tangle no :exports none :eval yes
+#### name:some-code ####
+x<-rnorm(100,10,5)
+y<-rnorm(100,20,15)
+fit <- lm(y~x)
+library(xtable)
+sink("ATable.tex")
+xtable(fit, caption="Example Table",digits=4,table.placement="H",label="ATable")
+sink()
+#+end_src
+
+#+RESULTS: some-code
+
+
 
 * References
 \bibliographystyle{apalike}
