--- a/index.org
+++ b/index.org
@@ -2660,6 +2660,33 @@ source("tests/test-tree.chisq.r")
    
 #+end_src
 
+** COMMENT use-trees-for-selecting-amongst-multiple-working-hypotheses-code
+#+name:use-trees-for-selecting-amongst-multiple-working-hypotheses
+#+begin_src R :session *R* :tangle src/use-trees-for-selecting-amongst-multiple-working-hypotheses.r :exports reports :eval no
+  require(devtools)
+  install_github("disentangle", "ivanhanigan")
+  require(disentangle)
+  # load
+  fpath <- system.file(file.path("extdata", "civst_gend_sector_full.csv"), package = "disentangle")
+  
+  analyte  <- read.csv(fpath)
+  analyte$random <- rnorm(nrow(analyte), 0 , 1)
+  summary(analyte)
+  # create a large number of randome variables
+  for(i in 1:75)
+    {
+      analyte[,ncol(analyte) + 1] <- rnorm(nrow(analyte), 10 , 20)    
+    }
+  names(analyte)
+  str(analyte)
+  analyte_varlist <- as.data.frame(names(analyte))
+  write.csv(analyte_varlist, "inst/extdata/civst_gend_sector_withrnorm.csv", row.names=F)
+  # edit with spreadsheet to include H1, H2, H3
+  analyte_varlist <- read.csv("inst/extdata/civst_gend_sector_withrnorm.csv", stringsAsFactor = F)
+  str(analyte_varlist)
+  
+#+end_src
+
 * Bibliograph-ology
 ** 2013-11-20-sync-endnote-and-mendeley-references-using-r-xml
 *** Intro
@@ -3345,7 +3372,8 @@ categories:
 ** Orgmode headers
 ** 2013-11-26-a-sharp-looking-orgmode-latex-export-header
 *** raw
-see src/SharpReportTemplate.org
+    [[~/Dropbox/projects/tools/LaTeX templates/Sweave/SweaveExample1.Rnw]]
+see [[./src/SharpReportTemplate.org]]
 *** blogged
 #+name:a-sharp-looking-orgmode-latex-export-header-header
 #+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-11-26-a-sharp-looking-orgmode-latex-export-header.md :exports none :eval no :padline no
@@ -3372,10 +3400,6 @@ see src/SharpReportTemplate.org
       ,#+email: ivan.hanigan@anu.edu.au
       ,#+LaTeX_CLASS: article
       ,#+LaTeX_CLASS_OPTIONS: [a4paper]
-      ,#+LaTeX_HEADER: \usepackage{tabulary}
-      ,#+LaTeX_HEADER: \usepackage{longtable}
-      ,#+latex_header: \usepackage{rotating}
-      ,#+LaTeX_HEADER: \usepackage{graphicx} 
       ,#+LaTeX_HEADER: \usepackage{amssymb,amsmath}
       ,#+LaTeX_HEADER: \usepackage{fancyhdr} %For headers and footers
       ,#+LaTeX_HEADER: \pagestyle{fancy} %For headers and footers
@@ -3384,7 +3408,6 @@ see src/SharpReportTemplate.org
       ,#+LaTeX_HEADER: \floatstyle{boxed} %using this
       ,#+LaTeX_HEADER: \restylefloat{figure} %and this command
       ,#+LaTeX_HEADER: \usepackage{url} %Formatting of yrls
-      ,#+LaTeX_HEADER: \usepackage{verbatim} 
       ,#+LaTeX_HEADER: \lhead{ivanhanigan.github.com}
       ,#+LaTeX_HEADER: \chead{}
       ,#+LaTeX_HEADER: \rhead{\today}
@@ -3392,20 +3415,39 @@ see src/SharpReportTemplate.org
       ,#+LaTeX_HEADER: \cfoot{}
       ,#+LaTeX_HEADER: \rfoot{\thepage\ of \pageref{LastPage}}
       ,#+LATEX: \tableofcontents
-       
+      
       ,* Introduction
-      This is a sharp looking report template I got from \cite{Bull2011}.
-      \clearpage
-       
-      ,* Section 1
+      This is a sharp looking report template I got from an R blogger \cite{Bull2011}.
+      
       The pages after the first page have a nice looking header, footer and page number.
       \clearpage
-       
+      
+      ,* Section 1
+      In the Org file you can see some hidden R code that computes a linear regression and returns the results shown in Table \ref{ATable}.
+      \input{ATable.tex}
+      \clearpage
+      ,*** COMMENT some-code
+      ,#+name:some-code
+      ,#+begin_src R :session *R* :tangle no :exports none :eval yes
+      #### name:some-code ####
+      x<-rnorm(100,10,5)
+      y<-rnorm(100,20,15)
+      fit <- lm(y~x)
+      library(xtable)
+      sink("ATable.tex")
+      xtable(fit, caption="Example Table",digits=4,table.placement="H",label="ATable")
+      sink()
+      ,#+end_src
+      
+      ,#+RESULTS: some-code
+      
+      
+      
       ,* References
       \bibliographystyle{apalike}
       \bibliography{/home/ivan_hanigan/references/library}
-       
-  
+      
+      
   
 #+end_src
 
