add graphviz py

--- a/index.org
+++ b/index.org
@@ -3394,6 +3394,94 @@ source("tests/test-tree.chisq.r")
       
 #+end_src
 
+** 2013-12-01-graphviz-automagic-flowcharts
+*** workflow_steps-code
+#+begin_src R :session *R* :tangle no :exports reports :eval no :padline no
+# ~/tools/transformations/workflow_steps.txt
+Transformation
+	description
+		the thing 
+	inputs
+		the thing before
+		another thing
+	output
+		the next thing
+	notes
+		the thing is this other thing	this is a really long description 
+		blah blah asdfasdfasdfasdfasdfa 
+
+Transformation
+	description
+		yet another thing
+	inputs
+		the next thing
+	output
+		a final thing
+	notes
+		this is a note
+
+#+end_src
+
+*** post
+#+name:graphviz-automagic-flowcharts-header
+#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-12-01-graphviz-automagic-flowcharts.md :exports none :eval no :padline no
+  ---
+  name: 2013-12-01-graphviz-automagic-flowcharts
+  layout: post
+  title: graphviz-automagic-flowcharts
+  date: 2013-12-01
+  categories:
+  - research methods 
+  - workflow
+  ---
+  
+  - Back in 2009 Joseph Guillaume worked with me on a complicated workflow
+  - He came up with this python script to help keep track of the steps
+  - The simple text file is a list of transformations, inputs and output
+  - It is converted to the right format and graphviz creates a html page with pop-outs
+  
+  #### Simple text list
+      Transformation
+              description
+                      the thing 
+              inputs
+                      the thing before
+                      another thing
+              output
+                      the next thing
+              notes
+                      the thing is this other thing   this is a really long description 
+                      blah blah asdfasdfasdfasdfasdfa 
+       
+      Transformation
+              description
+                      yet another thing
+              inputs
+                      the next thing
+              output
+                      a final thing
+              notes
+                      this is a note
+  
+  <p></p>
+  
+  - keep this in your work directory and update it whenever you add a step to the workflow
+  - the list can be as big as you like (hundreds of steps), and entered in any order, the inputs/output relationships determine how the graph looks at the end
+  - to run the script just do the one line
+
+  #### Python code: run
+      python transformations.py workflow_steps.txt index
+  
+  <p></p>
+  - open the html page and click on a square box to bring up the pop-out
+  - short text is shown, long text is replaced by an ellipse and only shown in pop-out
+  
+  #### Conclusions  
+  - I've popped the script up as a [Github repo](https://github.com/ivanhanigan/transformations)
+  - The example is in the [gh-pages branch](http://ivanhanigan.github.io/transformations/)
+  
+#+end_src
+
 * Graphical User Interfaces
 * Version Control
 ** 2013-11-19-git-can-be-simple-or-very-complicated
@@ -3522,7 +3610,7 @@ see [[./src/SharpReportTemplate.org]]
   
   - Last week I started a new discussion about sharing and extending research protocols.
   
-  #### My Colleague sent me a link to the [Prometheus Wiki](prometheuswiki.org)​
+  #### My Colleague sent me a link to the [Prometheus Wiki](http://prometheuswiki.publish.csiro.au/tiki-custom_home.php)​
       a site for sharing research protocols. The idea is to give people
       a place to post research protocols since everyone develops them
       and then mentions them in papers but they rarely make it online in
