--- a/index.org
+++ b/index.org
@@ -3693,16 +3693,27 @@ see [[./src/SharpReportTemplate.org]]
   - research methods
   ---
   
-  -
+  - Gantt Charts are a method used in Project Management to visualise the task list and progress with a calendar.
+  - The title of this post comes from [Dr Tomas Aragon's paper 'Project Management for Health Professionals'](http://berkeley.academia.edu/TomasAragon/Teaching/31679/Project_Management_for_Health_Professionals)
+  - There is also an accompanying [Tutorial](http://medepi.com/2012/02/05/project-mgmt/)
+  - Dr Aragon also has a couple of suggestions for software to use for creating Gantt Charts [on this page](http://medepi.com/2011/11/29/software-recs/)
+  - I haven't used those but here are some I have used
+  
+  #### Gantter
+  
+  - This is an online tool, that can integrate with Google Drive [http://www.gantter.com/](http://www.gantter.com/)
+  - It also imports MS Project files
   
   #### Taskjuggler
   
   - Emacs orgmode can be used with a Ruby package called Taskjuggler (tj3)
   - The command C-c C-e j will export a file such as this description ready for conversion [http://orgmode.org/worg/org-tutorials/org-taskjuggler.html](http://orgmode.org/worg/org-tutorials/org-taskjuggler.html)
   - I also needed to include this suggested by d.tchin 29 Feb 2012,  [http://permalink.gmane.org/gmane.emacs.orgmode/52844](http://permalink.gmane.org/gmane.emacs.orgmode/52844)
-  - an example I use for a template is in my [disentangle Github repo]()
+  - an example I use for a template is in my [disentangle Github repo](https://raw.github.com/ivanhanigan/disentangle/gh-pages/gantt-tj3/gantt-tj3.org)
+  - which produces [this output](http://ivanhanigan.github.io/disentangle/gantt-tj3/Gantt%20Chart.html)
   
-
+  ![gantt-tj3.png](/images/gantt-tj3.png)
+  
       
 #+end_src
 
